--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Web app for Paper Trading",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node server/index.js\" \"cd client && npm start\"",
+    "start": "concurrently \"nodemon server/index.js\" \"cd client && npm start\"",
     "setup": "npm install && cd server && npm install && cd ../client && npm install && cd .."
   },
   "repository": {
